# media-agent

./: .gitignore  README.md  deploy.py
.devcontainer/: .env.example  Dockerfile  compose.yaml  devcontainer.json  pyproject.toml
.devcontainer/.mcp-genmedia/: Dockerfile
media-agent/: agent.py
media_agent/: __init__.py  agent.py  callbacks.py  prompt.py
media_agent/tools/: __init__.py  genmedia.py  test.py
media_agent_mcp/: auth.py  callbacks.py
