[project]
name = "media-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=0.3.7",
    "google-adk[a2a,eval]>=1.15.1",
    "google-cloud-aiplatform[adk,agent-engines]>=1.117.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-dotenv>=1.1.1",
]
