[project]
name = "Media-agent"
version = "0.1.0"
description = "メディア生成エージェント"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk[a2a,eval]>=1.15.1",
    "google-cloud-aiplatform[adk,agent-engines]>=1.117.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
